fix spacing of hero slider

--- a/wp-content/themes/goorin/css/app.css
+++ b/wp-content/themes/goorin/css/app.css
@@ -1660,15 +1660,21 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
 }
 /* line 36, sass/components/_banner.scss */
 .banner article .banner-content {
-  margin: 0 0 5px;
+  margin: 0 0 10px;
 }
-/* line 39, sass/components/_banner.scss */
+@media only screen and (min-width: 768px) {
+  /* line 36, sass/components/_banner.scss */
+  .banner article .banner-content {
+    margin: 0 0 13px;
+  }
+}
+/* line 42, sass/components/_banner.scss */
 .banner article h6 {
   text-transform: uppercase;
   font-weight: normal;
 }
 @media only screen and (min-width: 768px) {
-  /* line 39, sass/components/_banner.scss */
+  /* line 42, sass/components/_banner.scss */
   .banner article h6 {
     margin-bottom: 14px;
     font-size: 17px;
@@ -1676,36 +1682,38 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
     letter-spacing: 0px;
   }
 }
-/* line 50, sass/components/_banner.scss */
+/* line 53, sass/components/_banner.scss */
 .banner article h2 {
-  letter-spacing: 4px;
+  letter-spacing: 1px;
   font-weight: normal;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  padding: 0 10px;
+  margin-bottom: 18px;
   font-size: 32.57px;
   line-height: 30px;
 }
 @media only screen and (min-width: 1024px) {
-  /* line 50, sass/components/_banner.scss */
+  /* line 53, sass/components/_banner.scss */
   .banner article h2 {
+    padding: 0;
     margin-bottom: 20px;
     font-size: 58px;
     line-height: 58px;
   }
 }
-/* line 63, sass/components/_banner.scss */
+/* line 68, sass/components/_banner.scss */
 .banner article p {
   font-weight: bold;
   text-transform: uppercase;
 }
 @media only screen and (min-width: 768px) {
-  /* line 63, sass/components/_banner.scss */
+  /* line 68, sass/components/_banner.scss */
   .banner article p {
     font-size: 13.68px;
     line-height: normal;
   }
 }
-/* line 71, sass/components/_banner.scss */
+/* line 76, sass/components/_banner.scss */
 .banner article p i, .banner article p em {
   text-transform: none;
   font-style: italic;
@@ -1714,13 +1722,13 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
   line-height: normal;
 }
 @media only screen and (min-width: 768px) {
-  /* line 71, sass/components/_banner.scss */
+  /* line 76, sass/components/_banner.scss */
   .banner article p i, .banner article p em {
     font-size: 13px;
     line-height: normal;
   }
 }
-/* line 82, sass/components/_banner.scss */
+/* line 87, sass/components/_banner.scss */
 .banner article .btn {
   border: 2px solid #ffffff;
   font-size: 8px;
@@ -1729,21 +1737,21 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
   background: none;
   background: none;
 }
-/* line 87, sass/components/_banner.scss */
+/* line 92, sass/components/_banner.scss */
 .banner article .btn:hover {
   color: #000000;
   background: #ffffff;
   background: #ffffff;
 }
 @media only screen and (min-width: 768px) {
-  /* line 82, sass/components/_banner.scss */
+  /* line 87, sass/components/_banner.scss */
   .banner article .btn {
     font-size: 13px;
     line-height: normal;
     padding: 13px 55px;
   }
 }
-/* line 97, sass/components/_banner.scss */
+/* line 102, sass/components/_banner.scss */
 .banner .slick-dots {
   margin: 0;
   padding: 0;
@@ -1753,23 +1761,23 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
   left: 0;
 }
 @media only screen and (min-width: 768px) {
-  /* line 97, sass/components/_banner.scss */
+  /* line 102, sass/components/_banner.scss */
   .banner .slick-dots {
     position: absolute;
     bottom: 30px;
     left: 0;
   }
 }
-/* line 105, sass/components/_banner.scss */
+/* line 110, sass/components/_banner.scss */
 .banner .slick-dots li {
   margin: 0 auto;
   height: auto;
   width: auto;
 }
-/* line 108, sass/components/_banner.scss */
+/* line 113, sass/components/_banner.scss */
 .banner .slick-dots li button {
-  height: 6px;
-  width: 6px;
+  height: 4px;
+  width: 4px;
   margin-right: 3px;
   margin-left: 3px;
   background: #464646;
@@ -1779,7 +1787,7 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
   border-radius: 50%;
 }
 @media only screen and (min-width: 768px) {
-  /* line 108, sass/components/_banner.scss */
+  /* line 113, sass/components/_banner.scss */
   .banner .slick-dots li button {
     height: 8px;
     width: 8px;
@@ -1787,12 +1795,12 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
     margin-left: 7px;
   }
 }
-/* line 120, sass/components/_banner.scss */
+/* line 125, sass/components/_banner.scss */
 .banner .slick-dots li.slick-active button {
   background: #ffffff;
   background: #ffffff;
 }
-/* line 126, sass/components/_banner.scss */
+/* line 131, sass/components/_banner.scss */
 .banner .slick-prev, .banner .slick-next {
   top: 50%;
   font-size: 0;
@@ -1807,32 +1815,32 @@ body.bodyhidden, .site-header .submenu, .cart-dropdown .cart-list, .cart-dropdow
   background: none;
   background: none;
 }
-/* line 137, sass/components/_banner.scss */
+/* line 142, sass/components/_banner.scss */
 .banner .slick-prev {
   left: 45px;
   opacity: 0.5;
   background: url("../images/slider-prev.png") right 0 no-repeat;
   background: url("../images/slider-prev.png") right 0 no-repeat;
 }
-/* line 141, sass/components/_banner.scss */
+/* line 146, sass/components/_banner.scss */
 .banner .slick-prev:hover {
   opacity: 1;
   background-position: 0 0;
 }
-/* line 146, sass/components/_banner.scss */
+/* line 151, sass/components/_banner.scss */
 .banner .slick-next {
   right: 45px;
   opacity: 0.5;
   background: url("../images/slider-next.png") 0 0 no-repeat;
   background: url("../images/slider-next.png") 0 0 no-repeat;
 }
-/* line 150, sass/components/_banner.scss */
+/* line 155, sass/components/_banner.scss */
 .banner .slick-next:hover {
   opacity: 1;
   background-position: right 0;
 }
 @media only screen and (min-width: 1140px) {
-  /* line 157, sass/components/_banner.scss */
+  /* line 162, sass/components/_banner.scss */
   .banner:hover .slick-prev, .banner:hover .slick-next {
     display: block !important;
   }
